--- a/.travis.yml
+++ b/.travis.yml
@@ -3,43 +3,19 @@ language: cpp
 os:
   - linux
   - osx
+  - windows
 
 env:
   - CONFIG=Release
   - CONFIG=Debug
 
-install:
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-         wget --no-check-certificate http://www.cmake.org/files/v3.3/cmake-3.3.2-Linux-i386.tar.gz
-      && tar -xzf cmake-3.3.2-Linux-i386.tar.gz
-      && sudo cp -fR cmake-3.3.2-Linux-i386/* /usr
-      && sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test
-      && sudo apt-add-repository -y ppa:beineri/opt-qt542
-      && sudo apt-get -qq update
-      && sudo apt-get -qq install g++-4.8 libc6-i386 qt54location qt54multimedia qt54sensors qt54svg qt54tools qt54webchannel qt54webkit
-      && export CXX="g++-4.8"
-      && export CC="gcc-4.8"
-      ;
-    else
-         brew update
-      && brew unlink cmake
-      && brew install cmake qt5
-      && chmod -R 755 /usr/local/opt/qt5/*
-      ;
-    fi
+before_install:
+ - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+ - sudo apt-get update -qq
+ - sudo apt-get install qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
+ - sudo apt-get install qt5-default qttools5-dev-tools
 
 script:
-  -    cd build
-    && if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-         cmake -DCMAKE_BUILD_TYPE=$CONFIG -DENABLE_TRAVIS_CI=ON -DCMAKE_PREFIX_PATH=/opt/qt54/lib/cmake -DUSE_PREBUILT_LIBGIT2_PLUGIN=OFF -DENABLE_TESTS=ON -DENABLE_SAMPLES=ON ..
-         ;
-       else
-         cmake -DCMAKE_BUILD_TYPE=$CONFIG -DENABLE_TRAVIS_CI=ON -DCMAKE_PREFIX_PATH=/usr/local/opt/qt5/lib/cmake -DENABLE_TESTS=ON -DENABLE_SAMPLES=ON ..
-         ;
-       fi
-    && make -j 3
-    && cd ..
-    && if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-         build/bin/runtests
-         ;
-       fi
+ - qmake -project
+ - qmake Druid.pro
+ - make
