--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ compiler:
 - clang
 - gcc
 env:
-- QT_BASE=55
 - QT_BASE=56
 - QT_BASE=57
 - CONFIG=Debug
@@ -14,21 +13,20 @@ before_install:
 - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
 - |
   if [ "$CXX" = "clang" ]; then
-    sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.6-binaries main' >> /etc/apt/sources.list"
+    sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.8-binaries main' >> /etc/apt/sources.list"
     sudo sh -c "echo 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise main' >> /etc/apt/sources.list"
     wget -O - http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
   fi
-- if [ "$QT_BASE" = "53" ]; then sudo add-apt-repository ppa:beineri/opt-qt55 -y; fi
-- if [ "$QT_BASE" = "54" ]; then sudo add-apt-repository ppa:beineri/opt-qt56 -y; fi
-- if [ "$QT_BASE" = "55" ]; then sudo add-apt-repository ppa:beineri/opt-qt57 -y; fi
+- if [ "$QT_BASE" = "56" ]; then sudo add-apt-repository ppa:beineri/opt-qt561-trusty -y; fi
+- if [ "$QT_BASE" = "57" ]; then sudo add-apt-repository ppa:beineri/opt-qt57-trusty -y; fi
 - sudo apt-get update -qq
 
 install:
-- sudo apt-get install -qq g++-4.9 gcc-4.9
-- if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
+- sudo apt-get install -qq g++-5 gcc-5
+- if [ "$CXX" = "g++" ]; then export CXX="g++-5" CC="gcc-5"; fi
 - |
   if [ "$CXX" = "clang" ]; then
-    sudo apt-get install -qq llvm-3.6
+    sudo apt-get install -qq llvm-3.8
     export CXX="clang++" CC="clang"
   fi
 - $CXX --version
